# tpmkit

./: .clang-format  .clang-tidy  .gitignore  .skeeper.yml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  cppcheck-suppressions.txt  skills-lock.json  vcpkg.json
.agents/agents/: project-scope-agent.md
.agents/skills/project-scoper/: SKILL.md
.agents/skills/tpm-add-port-or-adapter/: SKILL.md
.agents/skills/tpm-build-config/: SKILL.md
.agents/skills/tpm-commit-pr/: SKILL.md
.agents/skills/tpm-debug/: SKILL.md
.agents/skills/tpm-release/: SKILL.md
.agents/skills/tpm-security-review/: SKILL.md
.agents/skills/tpm-write-code/: SKILL.md
.agents/skills/tpm-write-docs/: SKILL.md
.agents/skills/tpm-write-logging/: SKILL.md
.claude/rules/: architecture.md  code-standards.md  concurrency.md  error-handling.md  library-api-design.md  logging.md  performance.md  security.md
.claude/skills/: tpm-add-port-or-adapter  tpm-build-config  tpm-commit-pr  tpm-debug  tpm-release  tpm-security-review  tpm-write-code  tpm-write-docs  tpm-write-logging  tpm-write-tests
.github/workflows/: ci.yml
cmake/: TpmkitBuildOptions.cmake  TpmkitDependencies.cmake  TpmkitDocs.cmake  TpmkitInstall.cmake  TpmkitOptions.cmake  check-domain-isolation.cmake  check-public-api-boundaries.cmake  check-test-policy.cmake  tpmkitConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  tpm_context_basics.cpp
examples/pcr/: CMakeLists.txt  active_banks.cpp  allocate_banks.cpp  auth_value_rejected.cpp  event_all_banks.cpp  event_debug.cpp  example_common.h  extend_debug.cpp  multi_bank_extend_debug.cpp  observer_trace.cpp  read_all_sha256.cpp  read_sha256.cpp  reset_debug.cpp
include/tpmkit/: api.h  esys_pcr_provider.h  exception.h  hash_algorithm.h  logger.h  noop_logger.h  pcr_bank.h  pcr_digest_value.h  pcr_index.h  pcr_observer.h  pcr_provider.h  pcr_result_types.h  pcr_selection.h  result.h  secret_buffer.h  spdlog_api.h  spdlog_logger.h  tpm_context.h
scripts/: build-tpmkit-docker.sh  exec-tpmkit-docker.sh  run-tpmkit-docker.sh  stop-tpmkit-docker.sh  tpm-start.sh  tpm-stop.sh  tpmkit-docker-status.sh
src/: CMakeLists.txt
src/adapters/common/: escape_value.h
src/adapters/logging/spdlog/: CMakeLists.txt  spdlog_logger.cpp
src/adapters/logging/stdio/: CMakeLists.txt
src/adapters/mock/: CMakeLists.txt  fake_tcti.cpp  fake_tpm_context.cpp  in_memory_pcr_observer.cpp  mock_pcr_provider.cpp  recording_logger.cpp
src/adapters/spdlog/: spdlog_logger.cpp
src/adapters/stdio/: stdio_logger.cpp
src/adapters/tpm2_esys/: CMakeLists.txt  error_translation.cpp  error_translation.h  esys_pcr_provider.cpp  esys_pcr_provider.h  esys_pcr_provider_factory.cpp  impl.h  log_events.h  tcti_loader.cpp  tcti_loader.h  tpm_context.cpp
src/adapters/tpm2_esys/context/: impl.h  tcti_loader.cpp  tcti_loader.h  tpm_context.cpp
src/adapters/tpm2_esys/pcr/: esys_pcr_provider.cpp  esys_pcr_provider.h  pcr_logging.cpp  pcr_logging.h  pcr_marshalling.cpp  pcr_marshalling.h  pcr_validation.cpp  pcr_validation.h
src/adapters/tpm2_esys/support/: error_translation.cpp  error_translation.h  esys_api.cpp  esys_api.h  log_events.h  log_record.h  tss_error_decoder.h
src/domain/: hash_algorithm.cpp  pcr_bank.cpp  pcr_digest_value.cpp  pcr_index.cpp  pcr_result_types.cpp  pcr_selection.cpp  result.cpp  secret_buffer.cpp  secret_buffer_testing.h
src/domain/encoding/: hex.cpp
src/domain/pcr/: bank.cpp  digest_value.cpp  index.cpp  result_types.cpp  selection.cpp
src/support/: build_options.h
tests/: CMakeLists.txt
tests/cmake_smoke/: CMakeLists.txt  smoke.cpp
tests/cmake_smoke_downstream/: CMakeLists.txt  production_smoke.cpp  run.cmake  spdlog_smoke.cpp  stdio_smoke.cpp  testing_smoke.cpp
tests/cmake_tss_discovery_guard/: run.cmake
tests/contract/: logger_port_test.cpp  pcr_provider_contract.cpp
tests/integration/: fake_tpm_context_header_self_contained.cpp  recording_logger_header_self_contained.cpp
tests/integration/tpm2_esys/: pcr_integration_test.cpp  tcti_loader_deferred_test.cpp  tcti_loader_test.cpp  tpm_context_swtpm_test.cpp
tests/unit/: error_translation_test.cpp  exception_header_smoke.cpp  fake_tcti_test.cpp  fake_tpm_context_test.cpp  foundational_types_test.cpp  logger_header_smoke.cpp  result_header_smoke.cpp  tcti_loader_test.cpp  tpm_context_config_test.cpp
tests/unit/common/: escape_value_test.cpp
tests/unit/domain/: hash_algorithm_test.cpp  pcr_value_types_test.cpp  secret_buffer_test.cpp
tests/unit/public_api/: encoding_hex_header_self_contained.cpp  encoding_hex_test.cpp  esys_pcr_provider_header_self_contained.cpp  fake_tpm_context_header_self_contained.cpp  foundational_headers_smoke.cpp  foundational_types_test.cpp  hash_algorithm_header_self_contained.cpp  in_memory_pcr_observer_header_self_contained.cpp  logger_header_smoke.cpp  mock_pcr_provider_header_self_contained.cpp  noop_logger_header_smoke.cpp  owned_tcti_context_header_self_contained.cpp  pcr_bank_header_self_contained.cpp  pcr_digest_value_header_self_contained.cpp  pcr_index_header_self_contained.cpp  pcr_observer_header_self_contained.cpp  pcr_ports_test.cpp  pcr_provider_header_self_contained.cpp  pcr_result_types_header_self_contained.cpp  pcr_selection_header_self_contained.cpp  result_header_smoke.cpp  secret_buffer_header_self_contained.cpp  spdlog_logger_header_self_contained.cpp  stdio_logger_header_self_contained.cpp  tpm_context_config_test.cpp  tpm_context_header_self_contained.cpp  tpm_context_header_smoke.cpp
tests/unit/spdlog/: spdlog_logger_test.cpp
tests/unit/stdio/: stdio_logger_test.cpp
tests/unit/testing/: fake_tpm_context_test.cpp  in_memory_pcr_observer_test.cpp  mock_pcr_provider_test.cpp  recording_logger_test.cpp
tests/unit/testing/tpm2_esys/: fake_tcti_test.cpp
tests/unit/tpm2_esys/: error_translation_test.cpp  esys_fake_api.h  esys_pcr_provider_factory_test.cpp  esys_pcr_provider_test.cpp  log_events_test.cpp  tcti_loader_test.cpp  tpm_context_lifecycle_test.cpp  tpm_context_pcr_provider_test.cpp
(+35 files in other folders)
